# tree-sitter-webidl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.webidl  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  stress.sh  tree-sitter.json
bindings/c/: tree-sitter-webidl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_webidl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWebIDL/: webidl.h
bindings/swift/TreeSitterWebIDLTests/: TreeSitterWebIDLTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
testcases/: CSS2Properties.webidl  CSSPageDescriptors.webidl  CSSPositionTryDescriptors.webidl
