[package]
name = "tree-sitter-webidl"
description = "Treesitter grammar for the Web Interface Definition Language"
version = "0.1.0"
authors = ["Paul Adenot <padenot@mozilla.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "webidl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/padenot/treesitter-webidl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
